@@ -467,6 +467,7 @@ All (GUI):
 - Added wxDataViewCtrl::GetSelectedItemsCount() and HasSelection().
 - Added wxFLP_SMALL and wxDIRP_SMALL styles.
 - Added support for saving alpha with TIFF images.
+- Added wxPersistentSplitter.
 
 OSX:
 
